--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>custom-vue-ui</title>
     <script src="./js/three.min.js"></script>
+    <script src="./js/config.js"></script>
   </head>
   <body>
     <noscript>
